[package]
name = "brein_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "lambda"

[dependencies]
dioxus = { version = "0.2.4", features = ["web", "router", "ssr"] }
lambda_http = "0.5.2"
lambda_runtime = "0.5.1"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
